# desktop

./: .prettierrc  bun.lockb  eslint.config.js  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  utils.rs
src-tauri/src/oauth/: discord.rs  github.rs  google.rs  mod.rs  utils.rs
src/lib/: Titlebar.svelte  types.ts
src/lib/components/: Sidebar.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/confirm/[provider]/: +page.svelte  +page.ts
src/routes/confirm/github/: +page.svelte  +page.ts
src/routes/login/: +page.svelte
src/routes/signup/: +page.svelte
