[package]
name = "keysync"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "keysync_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.7", features = [] }

[dependencies]
serde_json = "1.0.128"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-rc.8", features = [] }
tauri-plugin-deep-link = "2.0.0-rc"
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
tauri-plugin-shell = "2.0.0-rc"
oauth2 = "4.4.2"
dirs = "5.0.1"
chrono = "0.4.38"
anyhow = "1.0.87"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.0.0-beta.0"

